Removed Bellman-Ford algorithm, added A* and Floyd-Warshall algorithms; fixed Node.java equals/hashCode methods.